# MYSTRAN

MYSTRAN-FEA-Program/: .gitignore  bootstrap  build_make.py  configure.ac  make.rules
MYSTRAN-FEA-Program/1-SRC/Windows/BANDIT/: BANDIT_BLOCK_DATA.f90
MYSTRAN-FEA-Program/1-SRC/a-Windows-version/MAIN/: MYSTRAN.f90
MYSTRAN-FEA-Program/aclocal/: ax_f90_fcflags.m4  ax_f90_module_extension.m4  ax_f90_module_flag.m4  ax_f90_nocommon.m4  ax_intel_mkl.m4  ax_windows_os.m4  darwin.m4
MYSTRAN-FEA-Program/src/: Makefile.am
MYSTRAN-FEA-Program/src/Interfaces/: MYSTRAN_FILES_Interface.f90  Makefile.am  REDUCE_KGGD_TO_KNND_Interface.f90
MYSTRAN-FEA-Program/src/Linux_differences/: Makefile.am  READ_CL.f90
MYSTRAN-FEA-Program/src/USE_IFs/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/ARPACK/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/BANDIT/: BANDIT_BLOCK_DATA.f90  Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG1/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG2/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG3/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG4/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG5/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG6/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG7/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/EMG/EMG8/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1A/: LOADB.f90  Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1A-BD/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1A-CC/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1B/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1C/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1D/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1E/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/L1U/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK1/LINK1/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK2/: Makefile.am  REDUCE_F_AO.f90  REDUCE_KGGD_TO_KNND.f90  REDUCE_KNND_TO_KFFD.f90  SOLVE_GOA.f90
MYSTRAN-FEA-Program/src/Windows/LK3/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK4/: LINK4.f90  Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK5/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK6/: Makefile.am  SOLVE_DLR.f90  SOLVE_PHIZL1.f90
MYSTRAN-FEA-Program/src/Windows/LK9/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK9/L91/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK9/L92/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/LK9/LINK9/: Makefile.am
MYSTRAN-FEA-Program/src/Windows/MAIN/: MYSTRAN.f90  MYSTRAN_FILES.f90  Makefile.am  READ_INI.f90
MYSTRAN-FEA-Program/src/Windows/Modules/: IOUNT1.f90  Makefile.am  OUTPUT4_MATRICES.f90
MYSTRAN-FEA-Program/src/Windows/Modules/ARPACK/: ARPACK_LANCZOS_EIG.f90  ARPACK_UTIL.f90  Makefile.am  debug.h  stat.h
MYSTRAN-FEA-Program/src/Windows/Modules/BANDIT/: BANDIT_MODULE.f90  Makefile.am
MYSTRAN-FEA-Program/src/Windows/Modules/LAPACK/: LAPACK_BLAS_AUX.f90  LAPACK_GIV_MGIV_EIG.f90  LAPACK_LANCZOS_EIG.f90  LAPACK_LIN_EQN_DGB.f90  LAPACK_LIN_EQN_DGE.f90  LAPACK_LIN_EQN_DPB.f90  LAPACK_MISCEL.f90  LAPACK_STD_EIG_1.f90  LAPACK_SYM_MAT_INV.f90  Makefile.am
MYSTRAN-FEA-Program/src/Windows/UTIL/: Makefile.am  PARSE_CHAR_STRING.f90  READ_CL.f90  WRITE_PARTNd_MAT_HDRS.f90
